--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/5573a1ee7b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -21,19 +22,19 @@
 
         <div class="container-fluid px-4 pb-5 gap-4">
             <div class="row">
-                <div class='col-sm-6 col-lg-4'>
+                <div class='col-sm-6 col-lg-4 mt-3'>
                     <img src='./images/blog1.jpg'class="img-fluid" alt="" />
                     <p class="text-secondary">March 28, 2023</p>
                     <h4 class="fs-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime reiciendis beatae.
                     </h4>
                 </div>
-                <div class='col-sm-6 col-lg-4'>
+                <div class='col-sm-6 col-lg-4 mt-3'>
                     <img src='./images/blog1.jpg' class="img-fluid" alt="" />
                     <p class="text-secondary">March 28, 2023</p>
                     <h4 class="fs-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime reiciendis beatae.
                     </h4>
                 </div>
-                <div class='col-sm-6 col-lg-4'>
+                <div class='col-sm-6 col-lg-4 mt-3'>
                     <img src='./images/blog1.jpg' class="img-fluid" alt="" />
                     <p class="text-secondary">March 28, 2023</p>
                     <h4 class="fs-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime reiciendis beatae.
@@ -45,12 +46,12 @@
             <h4 class="fs-4 text-decoration-underline"> Health Information Blogs</h4>
         </div>
         <div class="px-4 py-3 ">
-            <button class="btn blog-category-button-active border border-1 rounded-pill" type="button">All
+            <button class="btn blog-category-button-active border border-1 rounded-pill mt-2" type="button">All
                 Topics</button>
-            <button class="btn blog-category-button border border-1 rounded-pill" type="button">Banking IT</button>
-            <button class="btn blog-category-button border border-1 rounded-pill" type="button">Big Data</button>
-            <button class="btn blog-category-button border border-1 rounded-pill" type="button">It Business</button>
-            <button class="btn blog-category-button border border-1 rounded-pill" type="button">Design</button>
+            <button class="btn blog-category-button border border-1 rounded-pill mt-2" type="button">Banking IT</button>
+            <button class="btn blog-category-button border border-1 rounded-pill mt-2" type="button">Big Data</button>
+            <button class="btn blog-category-button border border-1 rounded-pill mt-2" type="button">It Business</button>
+            <button class="btn blog-category-button border border-1 rounded-pill mt-2" type="button">Design</button>
         </div>
         <div class="px-4 py-3 ">
             <p>
@@ -62,7 +63,7 @@
         <div class="container-fluid px-4 pb-5 gap-4">
             <div class="row">
                 <div class='col-sm-6 col-lg-4'>
-                    <div class="shadow">
+                    <div class="shadow my-3">
                         <img src='./images/blog1.jpg'class="img-fluid" alt="" />
                         <div class="p-3">
                             <p class="text-secondary">topic name</p>
@@ -78,13 +79,13 @@
                             </div>
                             <div class="text-end text-primary">
 
-                                < FaArrowRight />
+                                <i class="fa-solid fa-arrow-right fa-beat" style="color: #5b83e1;"></i>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class='col-sm-6 col-lg-4'>
-                    <div class="shadow">
+                    <div class="shadow mt-3">
                         <img src='./images/blog1.jpg'class="img-fluid" alt="" />
                         <div class="p-3">
                             <p class="text-secondary">topic name</p>
@@ -100,13 +101,13 @@
                             </div>
                             <div class="text-end text-primary">
 
-                                < FaArrowRight />
+                                <i class="fa-solid fa-arrow-right fa-beat" style="color: #5b83e1;"></i>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class='col-sm-6 col-lg-4'>
-                    <div class="shadow">
+                    <div class="shadow mt-3">
                         <img src='./images/blog1.jpg'class="img-fluid" alt="" />
                         <div class="p-3">
                             <p class="text-secondary">topic name</p>
@@ -122,7 +123,7 @@
                             </div>
                             <div class="text-end text-primary">
 
-                                < FaArrowRight />
+                                <i class="fa-solid fa-arrow-right fa-beat" style="color: #5b83e1;"></i>
                             </div>
                         </div>
                     </div>
